--- a/ExchangeWeb/Views/Shared/_Layout.cshtml
+++ b/ExchangeWeb/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <body>
     <div class="sticky-top">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="/">Exchange</a>
         </nav>
     </div>
     <div class="container">
